[package]
name = "piston-space-invaders"
version = "0.1.0"
authors = ["Aurélien Richez <aurelien.richez@gmail.com>"]

[dependencies]
piston_window = "0.80.0"
piston = "0.37.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"
image = "*"
intel-8080-emu = { path = "../intel-8080-emu"}
space-invaders-core = { path = "../space-invaders-core"}