[package]
name = "wasm-space-invaders"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2"
intel-8080-emu = "0.1"
space-invaders-core = { path = "../space-invaders-core"}
console_error_panic_hook = { version = "0.1.7", optional = true }


[dependencies.web-sys]
version = "0.3.77"
features = ["CanvasRenderingContext2d", "ImageData"]